<resources>
    <string name="app_name">QuesApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect. Password must be 6 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_user"><u>New User! Register Here</u></string>
    <string name="forget_pwd"><u>Forgot Password</u></string>
    <string name="err_msg_email">Enter Correct EmailId</string>
    <string name="hint_name">Enter EmailId</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="veryfy">You are not a Verifed User. </string>
    <string name="very_email"><u>Very Email</u></string>
    <string name="feedback">FeedBack</string>
    <string name="feedbackdetail">Give Your Feedback</string>
    <string name="sendFeedback">send</string>
    <string name="send">Send Question</string>
    <string name="feedback1">Feedback</string>
    <string name="report">Report Error</string>
    <string name="prompt_name"> Name</string>
    <string name="aboutus">About Us</string>
    <string name="aboutus_content1">A-TRIO is an innovative start-up, recognized by Government of India, in the world of mobile app development, Educational
Services and Placement Services. We create intuitive mobile apps and websites for the success of your business. Our sophisticated
technology solutions together with user-friendly design makes us peerless amongst the mobile app development companies. We are
dedicated to augment your business growth by providing nothing but the best mobile application solutions.\n\n
Mobile-phone usage have risen of late leading smartphone apps to become a key marketing tool for companies of all sizes. It has
become an important component of a business to reach out to the potential customers in the market. It is thus vital for a business, big or small, to have its own mobile application.</string>
    <string name="aboutus_content2">A-TRIO DATA MANAGEMENT\nAND EDUCATION SERVICES PVT. LTD.\n20/51, Alchancode,\nCollege (po) Chittur,\n
Palakkad, 678104\n\ninfo@atrio.co.in\n\n9544899416, 9686076406</string>
    <string name="tandc"> * By register, I accept the <u>Terms and Conditions.</u></string>
    <string name="termandcond">Terms and Conditions</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="contactus">Contact Us</string>
    <string name="contactus_content1">Please contact us for any questions or comments (including all inquiries unrelated to
copyright infringement) regarding this platform.\n\n
        <u>Grievance officer</u>\nIn accordance with Information Technology Act, 2000 and rules made there under, the
name and contact details of the Grievance Officer are provided below:\n\n
Mr. Prasoon Mani\n
20/51 Alchancode\n
college pop chittur\n
palakkad\n
Phone: +91 9544899416\n
Email: info@atrio.co.in</string>
    <string name="term_content">1. Persons who are “incompetent to contract” within the meaning of the Indian Contract Act, 1872 including minors, un-discharged insolvents etc. are not eligible to use the platform. Only individuals who are 18 years of age or older may use the platform and avail services.
        If you are under 18 years of age and you wish to download, install, access or use the platform, your parents or legal guardian must acknowledge and agree to the Terms of Use and Privacy Policy.
        Should your parents or legal guardian fail to agree or acknowledge the Terms of Use and A TRIO policies, you shall immediately discontinue its use. A TRIO reserves the right to terminate your membership and / or deny access to the platform if it is brought A TRIO’s notice that you are under the age of 18 years.\n\n\n

        2. If you choose to use the platform, it shall be your responsibility to treat your user
identification code, password and any other piece of information that we may
provide, as part of our security procedures, as confidential and not disclose the
same to any person or entity other than us. We shall at times and at our sole
discretion reserve the right to disable any user identification code or password if
you have failed to comply with any of the provisions of these Terms of Use.\n\n\n

        3. You understand and agree that the use of the services does not include the provision
of a computer or mobile device or other necessary equipment to access it. You
also understand and acknowledge that the use of the platform requires internet
connectivity and telecommunication links. You shall bear the costs incurred to
access and use the platform and avail the services, and we shall not, under any
circumstances whatsoever, be responsible or liable for such costs.\n  1.By using
the Platform you represent and warrant that:\n\n\n

        i. All registration information you submit is truthful, lawful and accurate and
that you agree to maintain the accuracy of such information.\n\n\n

    ii. Your use of the Platform shall be solely for your personal use and you shall
not authorize others to use your account, including your profile or email
address and that you are solely responsible for all content published or
displayed through your account, including any email messages, and your
interactions with other users and you shall abide by all applicable local,
state, national and foreign laws, treaties and regulations, including those
related to data privacy, international communications and the transmission
of technical or personal data.\n\n\n

        iii. You will not submit, post, upload, distribute, or otherwise make available or
transmit any content that: a. is defamatory, abusive, harassing, insulting,
threatening, or that could be deemed to be stalking or constitute an invasion
of a right of privacy of another person; b. is bigoted, hateful, or racially or
otherwise offensive; c. is violent, vulgar, obscene, pornographic or
otherwise sexually explicit; d. is illegal or encourages or advocates illegal
activity or the discussion of illegal activities with the intent to commit them.\n\n\n

iv. All necessary licenses, consents, permissions and rights are owned by you
and there is no need for any payment or permission or authorization
required from any other party or entity to use, distribute or otherwise exploit
in all manners permitted by these Terms of Use and Privacy Policy, all
trademarks, copyrights, patents, trade secrets, privacy and publicity rights
and / or other proprietary rights contained in any content that you submit,
post, upload, distribute or otherwise transmit or make available.\n\n\n

v. You will not (a) use any services provided by the platform for commercial
purposes of any kind, or (b) advertise or sell any products, services or
otherwise (whether or not for profit), or solicit others (including, without
limitation, solicitations for contributions or donations) or use any public
forum for commercial purposes of any kind. In the event you want to
advertise your product or service contact info@atrio.co.in\n\n\n

vi. You will not use the platform in any way that is unlawful, or harms us or any
other person or entity, as determined in our sole discretion.\n\n\n
vii. You will not post, submit, upload, distribute, or otherwise transmit or make
available any software or other computer files that contain a virus or other
harmful component, or otherwise impair or damage the platform or any
connected network, or otherwise interfere with any person or entity’s use or
enjoyment of the platform.\n\n\n

viii. You will not use another person’s username, password or other account
information, or another person’s name, likeness, voice, image or photograph
or impersonate any person or entity or misrepresent your identity or
affiliation with any person or entity.
        \n\n\n
ix. You will not engage in any form of antisocial, disrupting, or destructive acts,
including “flaming,” “spamming,” “flooding,” “trolling,” and “griefing” as
those terms are commonly understood and used on the Internet.\n\n\n
x. You will not delete or modify any content of the platform, including but not
limited to, legal notices, disclaimers or proprietary notices such as copyright
or trademark symbols, logos, that you do not own or have express permission to modify.\n\n\n
xi. You will not post or contribute any information or data that may be obscene,
indecent, pornographic, vulgar, profane, racist, sexist, discriminatory,
offensive, derogatory, harmful, harassing, threatening, embarrassing,
malicious, abusive, hateful, menacing, defamatory, untrue or political or
contrary to our interest.\n\n\n
xii. You shall not access the platform without authority or use the platform in a
manner that damages, interferes or disrupts:\n\n
a. any part of the platform or the platform software; or\n
b. any equipment or any network on which the platform is stored or any
equipment of any third party\n\n\n

        2. You release and fully indemnify A TRIO and/or any of its officers and
representatives from any cost, damage, liability or other consequence of any of the
actions of the users of the platform and specifically waive any claims that you may
have in this behalf under any applicable laws of India. Not withstanding its
reasonable efforts in that behalf, A TRIO cannot take responsibility or control the
information provided by other Users which is made available on the platform. You
may find other user’s information to be offensive, harmful, inconsistent, inaccurate,
or deceptive.

    </string>
    <string name="term_content1">1.<u> Cancellation</u>\n\n
        i. As a general rule you shall not be entitled to cancel your order once you have placed the order.\n\n
        ii. We reserve the sole right to cancel your order\n\n
        2. <u>Refunds</u> \n\n
        NO refunds\n</string>
    <string name="term_content3"><![CDATA[I. These terms of use (the “Terms of Use”) govern your use of our website www.atriodata.com (the “Website”) and our “Atrio ” application for mobile and handheld devices (the “App”). The website and the App are jointly referred to as the “Platform”. Please read these Terms of Use carefully before you use the services. If you do not agree to these Terms of Use, you may not use the services on the platform, and we request you to uninstall the App. By installing, downloading or even merely using the platform, you shall be contracting with Atrio and you signify your acceptance to the Terms of Use and other Atrio policies (including but not limited to the Cancellation & Refund Policy, Privacy Policy and Take Down Policy) as posted on the platform from time to time, which takes effect on the date on which you download,
    install or use the services, and create a legally binding arrangement to abide by the same.\n\n
    The platform is operated and owned by ATRIO Data Management and Educational Services Private Limited, a company incorporated under the Companies Act, 1956 and having its registered office at 20/51, Alchancode, college po chittur palakkad 678104. For the purpose of these Terms of Use, wherever the context so requires, ”you” shall mean any natural or legal person who has agreed to become a buyer or customer on the platform by providing Registration Data while registering on the platform as a registered user using any computer systems. The terms “ATRIO”, “we”, “us” or “our” shall mean ATRIO Data Management and Educational Services Private Limited.\n\n]]></string>
    <string name="gen">General terms of use</string>
    <string name="home">Home</string>
</resources>