<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/send_ques"
        android:orderInCategory="1"
        android:title="@string/send"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="2"
        android:title="@string/feedback1"
        app:showAsAction="never" />
    <item
        android:id="@+id/report"
        android:orderInCategory="3"
        android:title="@string/report"
        app:showAsAction="never" />
    <item
        android:id="@+id/tandc"
        android:orderInCategory="4"
        android:title="@string/termandcond"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacypolicy"
        android:orderInCategory="5"
        android:title="@string/privacypolicy"
        app:showAsAction="never" />
    <item
       android:id="@+id/aboutus"
    android:orderInCategory="6"
    android:title="@string/aboutus"
    app:showAsAction="never" />
    <item
        android:id="@+id/home"
        android:orderInCategory="7"
        android:title="@string/home"
        app:showAsAction="never" />

</menu>