<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.atrio.quesapp.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:background="@drawable/ripple_effect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_very"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_submit"
                android:text="@string/veryfy"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bt_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_email"
                android:textColor="@color/colorAccent"
                android:layout_gravity="right"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"/>


        </LinearLayout>



         <TextView
            android:id="@+id/tv_newuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/btn_submit"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/new_user"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_forgotpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/tv_newuser"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/forget_pwd"
            android:textStyle="bold"/>

    </LinearLayout>
   <!-- <ProgressBar
        android:id="@+id/circular_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:indeterminate="false"
        android:max="48"
        android:progress="1"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/circular_progressbar" />-->
</RelativeLayout>
