<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atrio.quesapp.AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
    <TextView
        android:id="@+id/tv_abutus1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/aboutus"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_abutus2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="start"
        android:text="@string/aboutus_content1"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_abutus3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/aboutus_content2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_contactus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/contactus"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_contactus2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/contactus_content1"
                android:textColor="@color/black"
                android:textSize="13sp" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
