<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atrio.quesapp.TermsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_policy"
                android:textSize="19sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="@string/gen"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/term_content"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:textAlignment="textStart"
                />
            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancellations and Refunds"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="start"
                android:textColor="@color/black"
                android:padding="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/term_content1"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:textAlignment="textStart"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Terms Of Use"
                android:textColor="@color/black"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/term_content3"
                android:gravity="start"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:textAlignment="textStart"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
